--- a/04-gsap/style.css
+++ b/04-gsap/style.css
@@ -10,3 +10,12 @@ body {
   height: 100%;
   width: 100%;
 }
+
+body {
+  background-color: #111;
+}
+
+#string {
+  height: 200px;
+  width: 100%;
+}
