--- a/06-gsap/style.css
+++ b/06-gsap/style.css
@@ -10,3 +10,58 @@ body {
   height: 100%;
   width: 100%;
 }
+
+body {
+  overflow-x: hidden;
+}
+
+#main {
+  height: 100%;
+  width: 100%;
+  background-image: url(https://images.pexels.com/photos/158163/clouds-cloudporn-weather-lookup-158163.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+
+#nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px 50px;
+  color: #fff;
+  font-size: 60px;
+}
+
+#nav i {
+  font-size: 100px;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+#full {
+  height: 100%;
+  width: 40%;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.448);
+  top: 0;
+  right: -40%;
+  backdrop-filter: blur(20px);
+  padding: 380px 180px;
+}
+
+#full h4 {
+  font-size: 100px;
+  font-weight: 700;
+}
+
+#full i {
+  position: absolute;
+  font-size: 80px;
+  top: 5%;
+  right: 10%;
+  background-color: white;
+  border-radius: 50%;
+  padding: 18px;
+  font-weight: 600;
+  cursor: pointer;
+}
